tests/baselines/reference/parserMemberAccessor1.errors.txt
parserMemberAccessor1.ts(2,7): error TS2378: A 'get' accessor must return a value.


==== parserMemberAccessor1.ts (1 errors) ====
    class C {
      get foo() { }
          ~~~
!!! error TS2378: A 'get' accessor must return a value.
      set foo(a) { }
    }